<resources>
    <string name="facebook_app_id">151336828938111</string>
    <string name="fb_login_protocol_scheme">fb151336828938111</string>
    <string name="app_name">Tongy</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="forgot_password_inst">Enter your email address below and we’ll\nsend you password reset instruction</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="send_password">Send Password</string>
    <string name="back_to_login">Back To Login</string>
    <string name="login_with_manager">Login with a Manager</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_title">No Internt Connection</string>
    <string name="no_internet">Your mobile is not connected to the internet. Please connect to an active internet connection.</string>
    <string name="invalid_session">Invalid Session</string>
    <string name="logout_device">Your session has been expired, Please login again to continue.</string>
    <string name="please_wait">Please wait...</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="something_went_wrong">Something went wrong, Please try again later.</string>
    <string name="textdata">A Privacy Policy is a legal statement that specifies what the business owner does with the personal data collected from users, along with how the data is processed and why.

In 1968, Council of Europe did studies on the threat of the Internet expansion as they were concerned with the effects of technology on human rights. This lead to the development of policies that were to be developed to protect personal data.

This marks the start of what we know now as a “Privacy Policy”. While the name “Privacy Policy” refers to the legal agreement, the concept of privacy and protecting user data is closely related.</string>
    <string name="filipino">Filipino</string>
    <string name="beginer">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="professional">Professional</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="verify_password">Verify Password</string>
    <string name="ok">OK</string>
    <string name="success">Success!</string>
    <string name="thanks">Thanks!</string>
    <string name="thanks_message">Thanks for contact. We ll be in touch soon.</string>
    <string name="error_email_activation">Your email is not verified yet!. Please check your mail for verification link or resend link again</string>
    <string name="resend_link">Resend link again</string>
    <string name="language_you_speak">LANGUAGE YOU SPEAK</string>
    <string name="language_you_want_To_learn">LANGUAGE YOU WANT TO LEARN</string>
    <string name="gender">PREFERRED GENDER</string>
    <string name="preferred_age">PREFERRED AGE</string>
    <string name="preferred_area">PREFERRED AREA</string>
    <string name="nearby_me">Nearby Me</string>
    <string name="world_wide">Worldwide</string>
    <string name="lets_learn">LET\'S LEARN</string>
    <string name="choose_language">choose language here</string>
    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Hindi</item>
        <item>Arabic</item>
        <item>Tamil</item>
        <item>Punjabi</item>
        <item>Malallayalam</item>
    </string-array>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="setPrefernces">Set Preferences!</string>
    <string name="selectConnections">Select Connections!</string>
    <string name="learnLessons"><![CDATA[Learn lessons & do online interactions]]></string>
    <string name="makeyourPost">Make Your Post!</string>
    <string name="dummyText">Lorem ipsum idor idada iddada Lorem ipsum idor Lorem ipsum idor Lorem ipsum idor idor Lorem ipsum idor Lorem ipsum idor idor Lorem ipsum Lorem ipsum idor idada iddada Lorem ipsum idor Lorem ipsum  </string>
    <string name="myProfile">My Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="changeEmail">Change Email Address</string>
    <string name="aboutQwer">About QWER</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="deactivateAccount">De-activate Account</string>
    <string name="contactUs">Contact Us</string>
    <string name="rateUs">Rate Us</string>
    <string name="pushNotifications">Push Notifications</string>
    <string name="VoiceCall">Voice Call</string>
    <string name="VideoCall">Video Call</string>
    <string name="logout">Logout</string>
    <string name="termsandConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="forgot_Password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="no_Account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="or">OR</string>
    <string name="signInFacebook">Sign in with Facebook</string>
    <string name="prompt_name">NAME</string>
    <string name="tandCAgree">I agree with all terms and conditions.</string>
    <string name="signUpFacebook">Sign Up with Facebook</string>
    <string name="country">Country</string>
    <string name="city">City/State</string>
    <string name="pincode">Pin Code</string>
    <string name="age">Age</string>
    <string name="iam">I am</string>
    <string name="about">About</string>
    <string name="letstart">LET\'S START</string>
    <string name="current_pass">CURRENT PASSWORD</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="confirm_new_pass">CONFIRM NEW PASSWORD</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="pass_update_success">Your password is updated successfully</string>
    <string name="current_email">CURRENT EMAIL ADDRESS</string>
    <string name="title">TITLE</string>
    <string name="new_email">NEW EMAIL ADDRESS</string>
    <string name="update_email">UPDATE EMAIL</string>
    <string name="joinUs">Join Us!</string>
    <string name="taps_text">A few key taps, and you\'ll  enjoy free!</string>
    <string name="emailVerification"><![CDATA[Please verify the link sent to your email & Proceed with login]]></string>
    <string name="setPreferncesWelcome">Set Preferences to look for your connection followed by filling up of your profile to help some one find you.</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="speaks">SPEAKS</string>
    <string name="learn">LEARN</string>
    <string name="aboutTab">ABOUT</string>
    <string name="french">French</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="save_andlook_again">SAVE &amp; START LOOKING</string>
    <string name="forgot_pass">Forgot Password!</string>
    <string name="forgot_pass_text">Please submit your registered Email to regenerate a new password</string>
    <string name="email">Email</string>
    <string name="submit">SUBMIT</string>
    <string name="save_update">SAVE &amp; UPDATE</string>
    <string name="profile_updated_successfully">Your Profile is updated successfully</string>
    <string name="deleteAccount_text">If you agreed the account will be  deleted permanently</string>
    <string name="agree">Agree</string>
    <string name="norecommendations">No Recommendations for your selected preferences.</string>
    <string name="setPreferncesAgain">Set Preferences Again</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_pass_length">Password length should be more than 6 characters</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_agree_terms_and_condition">Please agree terms and conditions</string>
    <string name="text_fb_error">Sorry! We are unable to get your email. Kindly signup through Tongy general signup process</string>
    <string name="please_enter_current_pass">Please enter current password</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="please_enter_confirm_pass">Please enter confirm password</string>
    <string name="resend_Link">Resend link</string>
    <string name="please_enter_current_email">Please enter current email</string>
    <string name="please_enter_new_email">Please enter new email</string>
    <string name="please_enter_pass_minimum">Password length should be more than 6 characters</string>
    <string name="please_enter_country">Please enter country</string>
    <string name="please_enter_city">Please enter city/state</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="please_enter_age">Please enter age</string>
    <string name="please_enter_about">Please enter about</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logoutAccount">Log out </string>
    <string name="logoutAccount_text">Are you sure you want to Log out?</string>
    <string name="please_pass_remove_spaces">Please remove spaces</string>
    <string name="resend_verification_Link">Resend verification link</string>
    <string name="yoour_message">YOUR MESSAGE</string>
    <string name="your_message">YOUR MESSAGE</string>
    <string name="please_name_length">Name should be more than 3 characters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_teaching_post">Create Teaching Post</string>
    <string name="create_meeting_post">Create Meeting Post</string>
    <string name="create_other_post">Create Other Post</string>
    <string name="create_new_post">Create New Post</string>
    <string name="title_activity_create_teaching_post">CreateTeachingPost</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add Description</string>
    <string name="add_cost">Add Cost</string>
    <string name="price">Price</string>
    <string name="add_start_date">Start Date</string>
    <string name="add_end_date">End Date</string>
    <string name="schedule">Schedule</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="type_of_class">type of class</string>
    <string name="online">Online</string>
    <string name="physical">Physical</string>
    <string name="address">Address</string>
    <string name="post_now">Post now</string>
    <string name="block">Block</string>
    <string name="remove">Remove</string>
    <string name="report">Report</string>
    <string name="lets_chat">Let\'s Chat</string>
    <string name="find_other_connection">Find Other Connection</string>
    <string name="connection">Connection!</string>
    <string name="new1">New</string>
</resources>